<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_background">TiElements Background</string>
    <string name="menu_status_bar">Status Bar</string>
    <string name="menu_lock_screen">Lockscreen</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_animations">Animations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_buttons">Buttons</string>
    <string name="menu_about">About</string>
    <string name="menu_quick_settings">Quick Settings</string>
    <string name="menu_misc">Misc</string>
    <string name="menu_ambient">Ambient</string>
    <string name="menu_battery">Battery</string>
    <string name="menu_screen">Screen</string>
    <string name="build_tweaks_summary_title">Add Elements in your device</string>
    <string name="who_we_are_desc">
        TitaniumOS is a Custom ROM based on Google Android Open Source Project.This ROM developed with a major focus on system stability and useful features. All this without compromising on the pure Android experience.
    </string>
    <string name="maintainers">Maintainers</string>
    <string name="maintainers_title">Official Maintainers</string>
    <string name="maintainers_summary">Officially supported Devices and Maintainers.</string>
    <string name="github">Github</string>
    <string name="github_description">View our source code</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_description">Subscribe to our Telegram channel</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_description">Support us to add more elements</string>
    <string name="maintainer_description">Maintainer: %1$s</string>
    <string name="loading_devices">Loading devices list...</string>
    <string name="loading_devices_failed">Failed to load devices list</string>
    <string name="devices_list_empty">List is empty, tap the icon to reload</string>
    <string name="reload_list">Reload</string>
    <string name="tielements_title">TiElements</string>
    <string name="tielements_summary_title">Add some more elements</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="dlg_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="app_name">TiElements</string>
    <string name="ls_disable_elements">Lockscreen Info Elements</string>
    <string name="lockscreen_battery_info_title">Charging info</string>
    <string name="lockscreen_battery_info_summary">Display charger max current, voltage, wattage and battery temperature while charging</string>
    <string name="statusbar_icons_category">Statusbar Icons</string>
    <string name="bluetooth_battery_title">Bluetooth battery status</string>
    <string name="bluetooth_battery_summary">Display battery level for the connected bluetooth device, if available</string>
    <string name="gestures_title">Gestures</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put phone to sleep</string>
    <string name="call_noti_options">Call Notification Options</string>
    <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on Call Waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on Disconnect</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
    <string name="lockscreen_media_category">Music</string>
    <string name="media_art_title">Media artwork</string>
    <string name="media_art_summary">Show media cover art as the lockscreen background</string>
    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
    <string name="ls_unlocking">Unlocking</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
    <string name="pocket_judge_fp_title">Allow FP in pocket mode</string>
    <string name="pocket_judge_fp_summary">Listen for fingerprint when pocket detection is active</string>
    <string name="hardware_keys_power_category">Power Button</string>
    <string name="powermenu_title">Power Menu</string>
    <string name="powermenu_summary">Customize elements to be displayed in power menu</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced Reboot</string>
    <string name="powermenu_lockdown">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_torch_summary">Show the torch option on the lockscreen</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="qs_panel_title">QS Panel</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="quick_pulldown_always">Always</string>
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_location">Traffic indicator placement</string>
    <string name="traffic_disabled">Disabled</string>
    <string name="traffic_statusbar">Statusbar</string>
    <string name="traffic_expanded_statusbar">Expanded header</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_arrow">Show arrows</string>
    <string name="network_traffic_arrow_summary">Show the network traffic indicator arrows</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_combined">Combined (Upload + Download)</string>
    <string name="show_network_traffic_dynamic">Dynamic</string>
    <string name="show_network_traffic_up">Upload</string>
    <string name="show_network_traffic_down">Download</string>
    <string name="show_network_traffic_all">Both</string>
    <string name="nettraf_font_size">Single net font size</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="hardware_keys_disable_title">Disable HW Keys</string>
    <string name="hardware_keys_disable_summary">Toggle to enable disable hw keys</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="disable_transition_animations_title">Disable transition animations</string>
    <string name="disable_transition_animations_summary">Force disable all transition animations</string>
    <string name="heads_up_notifications">Heads Up</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="light_settings_header">Notif. Led Settings</string>
    <string name="battery_light_settings">Battery Charging Light</string>
    <string name="battery_light_summary">Customization for Battery Light</string>
    <string name="qs_tile_animation_style_title">QS tile animation</string>
    <string name="qs_tile_animation_duration_title">QS tile animation duration</string>
    <string name="qs_tile_animation_interpolator_title">QS tile animation interpolator</string>
</resources>