<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_animations"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <Preference
         android:key="animations_category"
         android:title="@string/animation_settings_title"
         android:summary="@string/animation_settings_summary"
         android:fragment="com.titanium.tielements.fragments.AnimationSettings" />

    <com.titanium.support.preferences.GlobalSettingSwitchPreference
        android:key="disable_transition_animations"
        android:title="@string/disable_transition_animations_title"
        android:summary="@string/disable_transition_animations_summary"
        android:defaultValue="false" />

    <com.titanium.support.preferences.SystemSettingListPreference
        android:key="screen_off_animation"
        android:title="@string/screen_off_animation_title"
        android:entries="@array/screen_off_animation_entries"
        android:entryValues="@array/screen_off_animation_values"
        android:summary="%s"
        android:defaultValue="0" />
   
    <ListPreference
        android:key="pref_scrollingcache"
        android:dialogTitle="@string/pref_scrollingcache_title"
        android:title="@string/pref_scrollingcache_title"
        android:summary="@string/pref_scrollingcache_summary"
        android:entries="@array/entries_scrollingcache"
        android:entryValues="@array/values_scrollingcache" />

    <ListPreference
        android:key="power_menu_animations"
        android:title="@string/power_menu_animation_title"
        android:dialogTitle="@string/power_menu_animation_dialog_title"
        android:entries="@array/power_menu_animations_entries"
        android:entryValues="@array/power_menu_animations_values"
        android:summary="@string/power_menu_animation_summary"
        android:persistent="false" />

    <PreferenceCategory
        android:key="quick_settings_animations"
        android:title="@string/qs_tile_animation_title">

        <ListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_duration"
            android:title="@string/qs_tile_animation_duration_title"
            android:entries="@array/qs_tile_animation_duration_entries"
            android:entryValues="@array/qs_tile_animation_duration_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
