<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_notifications"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <!-- Heads up -->
    <Preference
        android:key="heads_up_notifications"
        android:title="@string/heads_up_notifications"
        android:fragment="com.titanium.tielements.fragments.HeadsUpSettings" />

    <PreferenceCategory
        android:key="led"
        android:title="@string/light_settings_header">

        <Preference
            android:key="notification_light"
            android:fragment="com.android.settings.applications.manageapplications.ManageApplications"
            android:title="@string/notification_light_settings">
            <extra
                android:name="classname"
                android:value="com.android.settings.Settings$NotificationAppListActivity" />
        </Preference>

        <Preference
            android:key="charging_light"
            android:title="@string/battery_light_settings"
            android:summary="@string/battery_light_summary"
            android:fragment="com.titanium.tielements.fragments.BatteryLightSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
