<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_buttons"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="volume_keys"
        android:title="@string/volume_keys_title">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:dialogTitle="@string/volume_key_cursor_control_title"
            android:entries="@array/volume_key_cursor_control_entries"
            android:entryValues="@array/volume_key_cursor_control_values"
            android:key="volume_key_cursor_control"
            android:title="@string/volume_key_cursor_control_title" />

    </PreferenceCategory>

</PreferenceScreen>
